# api-datasette

./: .gitignore  CHECKS  Procfile  README.md  app.json  composer.json  existenz-api-definition.yaml  generate.py  metadata.json  pyproject.toml  requirements.txt
docs/: requests.http
