[tool.poetry]
name = "api-datasette"
version = "0.1.0"
description = "Datasettes containing data related to api.existenz.ch"
authors = ["Christian Studer <cstuder@existenz.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
datasette = "^0.61.1"
requests = "^2.25.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
