[project]
name = "api-datasette"
version = "0.1.0"
description = "Datasettes containing data related to api.existenz.ch"
authors = [{ name = "Christian Studer", email = "cstuder@existenz.ch" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "datasette>=0.65.1,<0.66.0",
    "requests>=2.25.1,<3.0.0",
    "PyYAML==6.0.1",
]

[dependency-groups]
dev = [
    "black>=20.8b1,<21.0",
    "flake8>=3.9.0,<4.0.0",
]
